## Copyright 2011, 2012, 2014 Peter Williams
##
## This file is part of omegaplot.
##
## Omegaplot is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published
## by the Free Software Foundation, either version 3 of the License,
## or (at your option) any later version.
##
## Omegaplot is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
## General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with Omegaplot. If not, see <http://www.gnu.org/licenses/>.
##
## (This copyright notice is delimited with double hashes to prevent
## it from being confusingly included in Makefile.in by automake.)

mypydir = $(pythondir)/omega
mypy_PYTHON = \
   __init__.py \
   base.py \
   ceaproj.py \
   gtk2.py \
   ipython.py \
   ipynb.py \
   latex.py \
   layout.py \
   pango.py \
   pyrapimage.py \
   pywcs.py \
   rect.py \
   render.py \
   sinproj.py \
   sphere.py \
   stamps.py \
   styles.py \
   util.py
